[metadata]
name = lsst-alert-database-server
version = 0.1.0
description = A server for the Rubin Observatory alert database
url = https://github.com/lsst-dm/alert_database_server
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 3 - Alpha
author = Spencer Nelson
author_email = swnelson@uw.edu
license = GPLv3

[options]
install_requires =
    fastapi
    uvicorn
    google-cloud-storage

packages =
    alertdb

[options.entry_points]
console_scripts =
    alertdb = alertdb.bin.alertdb:main
