[metadata]
name = lsst-alert-database-server
version = 0.1.0
description = A server for the Rubin Observatory alert database
url = https://github.com/lsst-dm/alert_database_server
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 3 - Alpha
author = Spencer Nelson
author_email = swnelson@uw.edu
license = GPLv3

[options]
python_requires = >= 3.8
install_requires =
    fastapi
    uvicorn
    google-cloud-storage
    requests

packages =
    alertdb

[options.entry_points]
console_scripts =
    alertdb = alertdb.bin.alertdb:main

[flake8]
max_line_length = 110
max_doc_length = 79
exclude =
    bin
    doc
    **/*/__init__.py
    **/*/version.py
    tests/.tests
ignore =
    E133
    E226
    E228

[mypy]
exclude = virtualenv*

[mypy-google.*]
ignore_missing_imports = True

[mypy-uvicorn.*]
ignore_missing_imports = True

[mypy-setuptools]
ignore_missing_imports = True
